adding a bunch of stupid attempts at fixing jar stuff